dfir_rs/tests/snapshots/surface_difference__diff_static@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_difference.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(pos_recv)</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(neg_recv)</code>"/]:::pullClass
3v1[\"(3v1) <code>difference::&lt;'tick, 'static&gt;()</code>"/]:::pullClass
4v1[\"(4v1) <code>sort()</code>"/]:::pullClass
5v1[/"(5v1) <code>for_each(|v| output_send.send(v).unwrap())</code>"\]:::pushClass
1v1-->|pos|3v1
2v1-->|neg|3v1
4v1-->5v1
3v1-->4v1
subgraph sg_1v1 ["sg_1v1"]
    2v1
    1v1
    subgraph sg_1v1_var_diff ["var <tt>diff</tt>"]
        3v1
        4v1
        5v1
    end
end
